--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2016-01-29  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 1.9 released.
+
+	* Streaming: Allow smartphone apps to queue streams.
+
+	* Streaming: Tell SPI slave title and URL of currently playing stream
+	  through registers 75 and 76. This is necessary to get the
+	  communication with the smartphone app on the SPI slave right.
+
+	* Network status: Fix register 50 updates.
+
+	* Misc: Various cosmetic changes.
+
 2016-01-12  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 1.8 released.
