--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-04-14  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 1.17 released.
+
+	* TA Control: Support structured meta data sent by smartphone app.
+
 2016-04-08  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 1.16 released.
