--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-10-05  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 2.3 released.
+
+	* Updates: Enable configuration of update package feeds.
+
 2016-09-30  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 2.2 released.
