--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-10-25  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 2.5 released.
+
+	* Networking: Fixed more network connection quirks caused by the new
+	  way of interaction with ConnMan.
+
 2016-10-21  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 2.4 released.
