--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2017-07-14  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 3.5 released.
+
+	* Appliances: Rename nonexistent appliance "MP 2500 HV" to
+	  not-yet-released appliance "MP 2500 R".
+
+	* UPnP: Device UUID shows up correctly on CalaBerbel.
+
+	* UPnP: Icon list is written to root XML file.
+
+	* Stability: Fixed crash when encountering a NIC with locally
+	  administered MAC address.
+
 2017-06-07  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 3.5 released.
