--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017-07-20  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 3.7 released.
+
+	* Appliances: Replace nonexistent appliance "Cala Plus" by "Cala CDR"
+	  and "Cala SR".
+
 2017-07-14  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 3.6 released.
