--- a/ChangeLog
+++ b/ChangeLog
@@ -684,4 +684,4 @@
 	* First release for testing.
 
 
-Copyright 2015, 2016, 2017 T+A elektroakustik GmbH & Co. KG
+Copyright 2015, 2016, 2017, 2018 T+A elektroakustik GmbH & Co. KG
