--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-10-31  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 4.17 released.
+
+	* Misc: Fix build with current stable version of Yocto Project (sumo).
+
 2018-10-10  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 4.16 released.
