--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+2018-12-11  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 4.18 released.
+
+	* Access point: The SPI slave can spawn or shut down access point
+	  mode. DCP register 107 can be used for this.
+
+	* UPnP server: Watch Gerbera status and report it through new DCP
+	  register 89. Also allow SPI slave to send control commands to the
+	  UPnP server (currently, only resetting the database).
+
+	* Appliances: Recognize appliances "SD3100HV" and "SDV3100HV".
+
+	* Networking: Cleaned up lots of network configuration code to enable
+	  future (and present) changes. Basically, paying of technical debt.
+
+	* Logging: Writes to registers 78, 79, 238, 239 are logged at normal
+	  verbosity level now.
+
+	* Unit tests: The doctest tests can generate JUnit reports now.
+	  The tests can be run with Valgrind now as well. This should make us
+	  ready for CI.
+
+	* Unit tests: Replace several singletons by dependency injection for
+	  better code and vastly improved testability.
+
 2018-10-31  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 4.17 released.
