ChangeLog: Fix typo.
Change-Id: I9c2ccb87ac7f9e815d3bfc95e755fab960efa972

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,7 +12,7 @@
 	* Appliances: Recognize appliances "SD3100HV" and "SDV3100HV".
 
 	* Networking: Cleaned up lots of network configuration code to enable
-	  future (and present) changes. Basically, paying of technical debt.
+	  future (and present) changes. Basically, paying off technical debt.
 
 	* Logging: Writes to registers 78, 79, 238, 239 are logged at normal
 	  verbosity level now.
