--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2019-03-29  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 4.24 released.
+
+	* DCP protocol: Add register 207 for reading out the current date and
+	  time in XML format.
+
+	* DCP protocol: Protocol level bumped to 1.0.8.
+
 2019-03-27  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 4.23 released.
