--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-11-14  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 4.24a released.
+
+	* Appliances: Recognize appliance "MP3000HV".
+
 2019-03-29  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 4.24 released.
